<resources>
    <string name="app_name">飞雀</string>
    <string name="find">发现</string>
    <string name="document">文档</string>
    <string name="mine">我的</string>
    <string name="book">知识库</string>
    <string name="recommend">推荐</string>
    <string name="hot">热门</string>
    <string name="publish">发布于</string>
    <string name="edit">本文由</string>
    <string name="at">在</string>
    <string name="do_edit">发布</string>
    <string name="token">请输入语雀上的Token</string>
    <string name="token_not_empty">Token不能为空</string>
    <string name="no_user_desc">这个人很懒，什么都没有留下</string>
    <string name="group_in">参与的团队:</string>
    <string name="repo">知识库</string>
    <string name="repo_no_desc">一个连简介都没有的知识库</string>
    <string name="all_repo_list">所有的知识库列表</string>
    <string name="log_out">退出登录</string>
    <string name="log_out_tip">是否确认退出登录?</string>
    <string name="tip">提示</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
</resources>