<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FindDocActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="280dp">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            app:titleEnabled="true"
            android:id="@+id/cl_title"
            app:expandedTitleGravity="left|bottom"
            app:collapsedTitleGravity="left|center_vertical"
            app:contentScrim="@color/colorPrimary"
            app:scrimAnimationDuration="500"
            app:scrimVisibleHeightTrigger="200dp"
            app:statusBarScrim="@color/titleColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/iv_header"
                app:layout_collapseParallaxMultiplier="0.6"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


            <androidx.appcompat.widget.Toolbar
                android:layout_marginTop="30dp"
                android:id="@+id/tool_bar"
                android:minHeight="56dp"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="56dp"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit"
                    android:textSize="12sp"
                    android:textColor="#8E8E8E"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/tv_author"
                    android:textSize="12sp"
                    android:textColor="@color/titleColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="@string/at"
                    android:textSize="12sp"
                    android:textColor="#8E8E8E"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/tv_create_time"
                    android:textSize="12sp"
                    android:textColor="@color/titleColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="@string/do_edit"
                    android:textSize="12sp"
                    android:textColor="#8E8E8E"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <WebView
                android:id="@+id/web_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>